# proxy-fork

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.github/workflows/: benchmarks.yml  lint-and-fmt.yml  unit-test.yml
crates/hyper-tungstenite/: .cargo_vcs_info.json  Cargo.toml
crates/hyper-tungstenite/examples/: server.rs
crates/hyper-tungstenite/src/: lib.rs
crates/hyper-tungstenite/tests/: simple-server.rs  split.rs  upgrade-request-by-value.rs
crates/proxy-fork-cli/: Cargo.toml  USAGE.md
crates/proxy-fork-cli/src/: args.rs  commands.rs  config.rs  dirs.rs  lib.rs  main copy.rs  main.rs
crates/proxy-fork-cli/src/commands/: gen_ca.rs  start_proxy.rs
crates/proxy-fork-cli/tests/: config_test.rs
crates/proxy-fork-core/: Cargo.toml
crates/proxy-fork-core/benches/: README.md  proxy_manager_bench.rs  proxy_manager_compare_bench.rs
crates/proxy-fork-core/examples/: dynamic_rules_simple.rs
crates/proxy-fork-core/src/: certification.rs  http_address.rs  lib.rs  match_strategy.rs  proxy_handler.rs  proxy_handler_test.rs  proxy_manage.rs  proxy_manage_stats.rs  utils.rs
crates/proxy-fork-core/tests/: certification_test.rs  e2e_test.rs  http_address_test.rs  proxy_manage_test.rs
